# chaosraft

./: Makefile  README.md  pyproject.toml
docs/: conf.py
docs/00_Vorbereitung/01_Netzwerkprogrammierung/: 01_Raw_TCP_Sockets.md  README.md
quellcode/vorbereitung/: helfer.py
quellcode/vorbereitung/netzwerk/: raw_socket.py  raw_socket.solution
tests/vorbereitung/netzwerk/: conftest.py  test_fixtures.py  test_raw_socket.py
