[tool.poetry]
name = "chaosraft"
version = "0.1.0"
description = "Ein Kurs um das Raftprotokoll zu implementieren"
authors = ["Olaf Gladis <hwmrocker@gladis.org>"]
packages = [{ include = "vorbereitung", from = "quellcode" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
furo = "*"
myst-parser = "*"
commonmark = "*"
sphinx-autobuild = "*"
pytest = "^7.1.2"
pytest-watch = "^4.2.0"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"
pytest-timeout = "^2.1.0"
pytest-mock = "^3.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.2"
markers = ["netzwerk"]
asyncio_mode = "strict"
